--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li><a id="cta__pricing" href="#!">Pricing</a></li>
       <li><a id="cta__faq" href="#!">FAQ</a></li>
       <li class="divider">&nbsp;</li>
-      <li><a id="cta__nav" href="#!"><strong>Hire Me</strong></a></li>
+      <li><a id="cta__nav" href="#!"><strong>Contact Us</strong></a></li>
     </ul>
 
 
@@ -41,12 +41,9 @@
       <div class="container">
         <div class="nav-wrapper">
           <ul class="right">
-            <li><a class="modal-trigger" href="#modal-about">
-                About
-            </a></li>
             <!-- Dropdown Trigger ** -->
             <li> <a class="dropdown-button" href="#!" data-activates="dropdown1">
-                Hire Me
+                Contact Us
                 <i class="mdi-navigation-arrow-drop-down right">&nbsp;</i>
               </a> </li>
           </ul>
